added more content.

--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -70,7 +70,38 @@
       storage needs.</p>
       <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email 
         attachments required.</p>
-      <a href="">See how Fylo works <img src="/fylo-dark-theme-landing-page-master/images/icon-arrow.svg" alt="arrow-icon"></a>
+      <p>See how Fylo works <img src="/fylo-dark-theme-landing-page-master/images/icon-arrow.svg" alt="arrow-icon"></p>
+    </div>
+  </div>
+
+  <div class="grid-2">
+    <div class="card">
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+        become a well-oiled collaboration machine.</p>
+      <div class="author">
+        <img src="/fylo-dark-theme-landing-page-master/images/profile-1.jpg" alt="pic">
+        <p>Satish Patel
+          Founder & CEO, Huddle</p> 
+      </div> 
+      <img class="quote" src="/fylo-dark-theme-landing-page-master/images/bg-quotes.png" alt="quote-img">
+    </div>
+    <div class="card">
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+        become a well-oiled collaboration machine.</p>
+      <div class="author">
+        <img src="/fylo-dark-theme-landing-page-master/images/profile-2.jpg" alt="pic">
+        <p>Bruce McKenzie
+          Founder & CEO, Huddle</p> 
+      </div> 
+    </div>
+    <div class="card">
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
+        become a well-oiled collaboration machine.</p>
+      <div class="author">
+        <img src="/fylo-dark-theme-landing-page-master/images/profile-3.jpg" alt="pic">
+        <p>Iva Boyd
+          Founder & CEO, Huddle</p> 
+      </div> 
     </div>
   </div>
 
@@ -84,25 +115,6 @@
 </html>
 
 <!--  
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Satish Patel
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Bruce McKenzie
-  Founder & CEO, Huddle
-
-  Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
-  become a well-oiled collaboration machine.
-
-  Iva Boyd
-  Founder & CEO, Huddle
-
   Get early access today
 
   It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
