--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -104,6 +104,27 @@
       </div> 
     </div>
   </div>
+  <div class="grid-3">
+    <h2>Get early access today</h2>
+    <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
+      questions, our support team would be happy to help you.</p>
+    <div>
+      <input type="email" placeholder="email@example.com"><button class="btn-2">Get Started For Free</button>
+    </div>  
+  </div>
+  <footer class="footer">
+    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</div>
+    <div>+1-543-123-4567 example@fylo.com</div>
+    <div>About Us
+      Jobs
+      Press
+      Blog
+    
+      Contact Us
+      Terms
+      Privacy</div>
+      <div></div>
+  </footer>
 
   <!-- <footer>
     <p class="attribution">
@@ -115,25 +136,7 @@
 </html>
 
 <!--  
-  Get early access today
+  
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
-  questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-  dolore magna aliqua
-
-  +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
+  
  -->
