--- a/fylo-dark-theme-landing-page-master/index.html
+++ b/fylo-dark-theme-landing-page-master/index.html
@@ -8,6 +8,9 @@
   
   <title>Frontend Mentor | Fylo landing page with dark theme and features grid</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -70,9 +73,12 @@
       storage needs.</p>
       <p>Securely share files and folders with friends, family and colleagues for live collaboration. No email 
         attachments required.</p>
-      <p>See how Fylo works <img src="/fylo-dark-theme-landing-page-master/images/icon-arrow.svg" alt="arrow-icon"></p>
+      <div class="fly-link">
+        <p>See how Fylo works</p><img src="/fylo-dark-theme-landing-page-master/images/icon-arrow.svg" alt="arrow-icon">
+      </div>  
     </div>
   </div>
+  <img class="quote" src="/fylo-dark-theme-landing-page-master/images/bg-quotes.png" alt="quote-img">
 
   <div class="grid-2">
     <div class="card">
@@ -80,18 +86,21 @@
         become a well-oiled collaboration machine.</p>
       <div class="author">
         <img src="/fylo-dark-theme-landing-page-master/images/profile-1.jpg" alt="pic">
-        <p>Satish Patel
-          Founder & CEO, Huddle</p> 
-      </div> 
-      <img class="quote" src="/fylo-dark-theme-landing-page-master/images/bg-quotes.png" alt="quote-img">
+        <div>
+          <p>Satish Patel</p>
+          <p>Founder & CEO, Huddle</p> 
+        </div>
+      </div>
     </div>
     <div class="card">
       <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has 
         become a well-oiled collaboration machine.</p>
       <div class="author">
         <img src="/fylo-dark-theme-landing-page-master/images/profile-2.jpg" alt="pic">
-        <p>Bruce McKenzie
-          Founder & CEO, Huddle</p> 
+        <div>
+          <p>Bruce McKenzie</p>
+          <p>Founder & CEO, Huddle</p> 
+        </div>
       </div> 
     </div>
     <div class="card">
@@ -99,8 +108,10 @@
         become a well-oiled collaboration machine.</p>
       <div class="author">
         <img src="/fylo-dark-theme-landing-page-master/images/profile-3.jpg" alt="pic">
-        <p>Iva Boyd
-          Founder & CEO, Huddle</p> 
+        <div>
+          <p>Iva Boyd</p>
+          <p>Founder & CEO, Huddle</p> 
+        </div>
       </div> 
     </div>
   </div>
@@ -108,22 +119,38 @@
     <h2>Get early access today</h2>
     <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any 
       questions, our support team would be happy to help you.</p>
-    <div>
-      <input type="email" placeholder="email@example.com"><button class="btn-2">Get Started For Free</button>
-    </div>  
+    <div class="email-bar"><input class="email" type="email" placeholder="email@example.com"><button class="btn-2">Get Started For Free</button> </div>
   </div>
   <footer class="footer">
-    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</div>
-    <div>+1-543-123-4567 example@fylo.com</div>
-    <div>About Us
-      Jobs
-      Press
-      Blog
-    
-      Contact Us
-      Terms
-      Privacy</div>
-      <div></div>
+    <div class="address">
+      <span><img src="/fylo-dark-theme-landing-page-master/images/logo.svg" alt="logo"></span>
+      <div class="icon">
+        <span><img src="/fylo-dark-theme-landing-page-master/images/icon-location.svg" alt="location-icon"></span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+      </div>
+    </div>
+    <div class="contact">
+      <div class="icon">
+        <span><img src="/fylo-dark-theme-landing-page-master/images/icon-phone.svg" alt="phone-icon"></span>
+        <p>+1-543-123-4567</p>
+      </div>
+      <div class="icon">
+        <span><img src="/fylo-dark-theme-landing-page-master/images/icon-email.svg" alt="email-icon"></span>
+        <p>example@fylo.com</p>
+      </div>
+    </div>
+    <div class="details">
+      <p>About Us</p>
+      <p>Jobs</p>
+      <p>Press</p>
+      <p>Blog</p>
+      <p>Contact Us</p>
+      <p>Terms</p>
+      <p>Privacy</p>
+    </div>
+    <div class="social-links">
+      
+    </div>
   </footer>
 
   <!-- <footer>
